--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,11 +28,8 @@
   </nav>
 
   <div class="container">
-    {{!-- <div class="row"> --}}
-    {{!-- <div class="mx-auto mt-4 border"> --}}
     {{{body}}}
-    {{!-- </div> --}}
-    {{!-- </div> --}}
+
   </div>
 
 
@@ -47,6 +44,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
+  {{!-- my js file for test --}}
   <script src="/javascripts/index.js"></script>
 </body>
 
