--- a/views/new.handlebars
+++ b/views/new.handlebars
@@ -12,18 +12,18 @@
   <div class="form-group row">
     <label for="date" class="col-md-3 col-form-label text-center">日期* : </label>
     <div class="col-md-8">
-      <input type="date" class="form-control" name="date">
+      <input type="date" class="form-control" name="date" value="{{listdate}}">
     </div>
   </div>
   <div class="form-group row">
     <label for="select" class="col-md-3 col-form-label text-center">類別* : </label>
     <div class="col-md-8">
       <select class="form-control" name="category">
-        <option value="家居物業">家居物業</option>
-        <option value="交通出行">交通出行</option>
-        <option value="休閒娛樂">休閒娛樂</option>
-        <option value="餐飲食品">餐飲食品</option>
-        <option value="其他">其他</option>
+        <option value="life">家居物業</option>
+        <option value="travel">交通出行</option>
+        <option value="happy">休閒娛樂</option>
+        <option value="food">餐飲食品</option>
+        <option value="others">其他</option>
       </select>
     </div>
   </div>
