Add category filter and show only certain category feature

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,9 +7,12 @@
         類別
       </button>
       <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-        <a class="dropdown-item" href="#">類別 1</a>
-        <a class="dropdown-item" href="#">類別 2</a>
-        <a class="dropdown-item" href="#">類別 3</a>
+        <a class="dropdown-item" href="/screen/life">家居物業</a>
+        <a class="dropdown-item" href="/screen/travel">交通出行</a>
+        <a class="dropdown-item" href="/screen/happy">休閒娛樂</a>
+        <a class="dropdown-item" href="/screen/food">餐飲食品</a>
+        <a class="dropdown-item" href="/screen/others">其他</a>
+        <a class="dropdown-item" href="/screen/all">全部類別</a>
       </div>
     </div>
 
