--- a/views/detail.handlebars
+++ b/views/detail.handlebars
@@ -1,4 +1,4 @@
-<form action="/records/{{{record._id}}}/edit" method="POST" class="col-md-10 mx-auto mt-4">
+<div class="col-md-10 mx-auto mt-4">
   <div class="row text-center my-3">
 
     <h2 class="col-md-8">您修改後的支出紀錄</h2>
@@ -38,4 +38,4 @@
       <a href="/" class="btn btn-secondary">Back</a>
     </div>
   </div>
-</form>
+</div>
