--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -1,4 +1,4 @@
-<form action="/records/{{{record._id}}}/edit" method="POST" class="col-md-10 mx-auto mt-4">
+<form action="/records/{{{record._id}}}?_method=PUT" method="POST" class="col-md-10 mx-auto mt-4">
   <div class="row text-center my-3">
     <p class="col-md-3">*必填欄位</p>
     <h2 class="col-md-8">請修改您的支出</h2>
