--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -53,7 +53,7 @@
               <td>{{{this.date}}}</td>
               <td class="amount">${{{this.amount}}}</td>
               <td><a href="/records/{{{this._id}}}/edit" class="btn btn-success">修改</a>
-                <form action="/records/{{{this._id}}}/delete" method="POST" style="display: inline;">
+                <form action="/records/{{{this._id}}}/delete?_method=DELETE" method="POST" style="display: inline;">
                   <button type="submit" class="btn btn-danger">刪除</button></form>
               </td>
             </tr>
@@ -65,7 +65,7 @@
     {{!-- add new one button --}}
     <div class="row">
       <div class="mx-auto mt-3">
-        <a href="/new" class="btn btn-primary mb-3">新增支出</a>
+        <a href="/records/new" class="btn btn-primary mb-3">新增支出</a>
       </div>
     </div>
 
