--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,1 +1,29 @@
-<h2>Login</h2>
+<div class="row mt-5">
+  <div class="col-md-6 m-auto">
+    <div class="card">
+      <div class="card-body">
+        <h2 class="card-title text-center">Login</h2>
+        {{!-- {{> messages}} 載入 messages.handlebars 的語法 --}}
+
+        <form action='/users/login' method="POST">
+          <div class="form-group">
+            <label for="email">Email address</label>
+            <input type="email" class="form-control" name="email" aria-describedby="email">
+          </div>
+          <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" class="form-control" name="password">
+          </div>
+
+          <button type="submit" class="btn btn-primary btn-block">Login</button>
+        </form>
+
+        <a href="/auth/facebook" class="btn btn-info btn-block mt-2">Facebook Login</a>
+
+        <p class="mt-4">
+          No Account? <a href="/users/register">Register</a>
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
