Add connect-flash for UI messages

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,7 +3,8 @@
     <div class="card">
       <div class="card-body">
         <h2 class="card-title text-center">Login</h2>
-        {{!-- {{> messages}} 載入 messages.handlebars 的語法 --}}
+        {{!-- 載入 messages.handlebars 的語法 --}}
+        {{> messages}}
 
         <form action='/users/login' method="POST">
           <div class="form-group">
