--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -3,7 +3,9 @@
     <div class="card">
       <div class="card-body">
         <h2 class="card-title text-center">Register</h2>
-        {{!-- {{> messages}} 載入 messages.handlebars 的語法 --}}
+        {{!-- 載入 messages.handlebars 的語法 --}}
+        {{> messages}}
+
         <form action='/users/register' method="POST">
           <div class="form-group">
             <label for="name">Name</label>
