--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,7 +20,11 @@
   <nav class="navbar navbar-light bg-light">
     <div class="container">
       <a class="navbar-brand text-info" href="/records">
-        {{{user.name}}} 的花錢記錄
+        {{#if user}}
+        {{{user.name}}}的花錢記錄
+        {{else}}
+        我的記帳本
+        {{/if}}
       </a>
       {{#if isAuthenticated}}
       <a href="/users/logout" class="btn btn-outline-info">Logout</a>
