--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,7 +23,7 @@
         {{#if user}}
         {{{user.name}}}的花錢記錄
         {{else}}
-        我的記帳本
+        你的記帳本
         {{/if}}
       </a>
       {{#if isAuthenticated}}
