--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,7 +2,8 @@
   <div class="col-md-6 m-auto">
     <div class="card">
       <div class="card-body">
-        <h2 class="card-title text-center">Login</h2>
+        <h5 class="card-title text-center banner font-italic mb-5">變成有錢人的第一步，就是先學會記帳喔!!</h5>
+        <h2 class="card-title text-center font-weight-bold">Login</h2>
         {{!-- 載入 messages.handlebars 的語法 --}}
         {{> messages}}
 
