--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -2,7 +2,7 @@
   <div class="col-md-6 m-auto">
     <div class="card">
       <div class="card-body">
-        <h2 class="card-title text-center">Register</h2>
+        <h2 class="card-title text-center font-weight-bold">Register</h2>
         {{!-- 載入 messages.handlebars 的語法 --}}
         {{> messages}}
 
