--- a/views/new.handlebars
+++ b/views/new.handlebars
@@ -12,7 +12,7 @@
   <div class="form-group row">
     <label for="date" class="col-md-3 col-form-label text-center">日期* : </label>
     <div class="col-md-8">
-      <input type="date" class="form-control" name="date" value="{{listdate}}">
+      <input type="date" class="form-control" name="date" value="{{{listdate}}}">
     </div>
   </div>
   <div class="form-group row">
@@ -28,7 +28,9 @@
   <div class="form-group row">
     <label for="amount" class="col-md-3 col-form-label text-center">金額* : </label>
     <div class="col-md-8">
-      <input type="text" class="form-control" name="amount">
+      <input type="text" class="form-control" name="amount" required>
+      <small id="amounthelp" class="form-text text-muted">金額必需 > 0
+      </small>
     </div>
   </div>
   <div class="row">
