--- a/views/new.handlebars
+++ b/views/new.handlebars
@@ -3,10 +3,13 @@
     <p class="col-md-3">*必填欄位</p>
     <h2 class="col-md-8">請輸入您的支出</h2>
   </div>
+
+
+
   <div class="form-group row">
     <label for="name" class="col-md-3 col-form-label text-center">名稱* : </label>
     <div class="col-md-8">
-      <input type="text" class="form-control" name="name" required>
+      <input type="text" class="form-control" name="name" {{#if name}} value="{{{name}}}" {{/if}}required>
     </div>
   </div>
   <div class="form-group row">
@@ -18,19 +21,37 @@
   <div class="form-group row">
     <label for="select" class="col-md-3 col-form-label text-center">類別* : </label>
     <div class="col-md-8">
+      {{#if category}}
+      <select class="form-control" name="category">
+        {{!-- handlebars helper 來做ifCond的判斷, helper放在record.js裡 --}}
+        <option value="life" {{#ifCond category '===' 'life'}} selected {{/ifCond}}>家居物業</option>
+        <option value="travel" {{#ifCond category '===' 'travel'}} selected {{/ifCond}}>交通出行</option>
+        <option value="happy" {{#ifCond category '===' 'happy'}} selected {{/ifCond}}>休閒娛樂</option>
+        <option value="food" {{#ifCond category '===' 'food'}} selected {{/ifCond}}>餐飲食品</option>
+        <option value="others" {{#ifCond category '===' 'others'}} selected {{/ifCond}}>其他</option>
+      </select>
+
+      {{else}}
       <select class="form-control" name="category">
         {{#each categories}}
         <option value="{{{this.category}}}">{{{this.category_ch}}}</option>
         {{/each}}
       </select>
+      {{/if}}
     </div>
   </div>
   <div class="form-group row">
     <label for="amount" class="col-md-3 col-form-label text-center">金額* : </label>
     <div class="col-md-8">
       <input type="text" class="form-control" name="amount" required>
-      <small id="amounthelp" class="form-text text-muted">金額必需 > 0
-      </small>
+      {{#if warning_msg}}
+      <div class="alert alert-danger alert-dismissible fade show mt-1 p-1" role="alert">
+        {{{warning_msg}}}
+        <button type="button" class="close p-1" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">×</span>
+        </button>
+      </div>
+      {{/if}}
     </div>
   </div>
   <div class="row">
