modify login page, input is required

--- a/views/partials/messages.handlebars
+++ b/views/partials/messages.handlebars
@@ -1,6 +1,6 @@
 {{#if errors}}
 {{#each errors}}
-<div class="alert alert-danger alert-dismissible fade show" role="alert">
+<div class="alert alert-danger alert-dismissible fade show pl-1" role="alert">
   {{{this.message}}}
   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
     <span aria-hidden="true">×</span>
@@ -9,7 +9,7 @@
 {{/each}}
 {{/if}}
 {{#if success_msg}}
-<div class="alert alert-success alert-dismissible fade show" role="alert">
+<div class="alert alert-success alert-dismissible fade show pl-1" role="alert">
   {{{success_msg}}}
   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
     <span aria-hidden="true">×</span>
@@ -17,7 +17,7 @@
 </div>
 {{/if}}
 {{#if warning_msg}}
-<div class="alert alert-warning alert-dismissible fade show" role="alert">
+<div class="alert alert-warning alert-dismissible fade show pl-1" role="alert">
   {{{warning_msg}}}
   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
     <span aria-hidden="true">×</span>
