--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -68,15 +68,23 @@
   </div>
 
   {{!-- total amount --}}
-  <div class="d-flex flex-column mb-4">
-    {{!-- Apply display utilities to create a flexbox container and transform direct children elements, flex-column 將裡面2項排成直的 --}}
-    <h4 class="mx-auto totalA">總金額 :</h4>
-    <h2 class="mx-auto" id="total">{{{total}}}</h2>
+  <div class="row mb-3">
+    <div class="col-md-9">
+      <canvas id="chart-area"></canvas>
+    </div>
+    <div class="col-md-3">
+      <div class="d-flex flex-column  mb-4">
+        <h4 class="mx-auto mt-5 totalA">總金額 :</h4>
+        <h2 class="mx-auto" id="total">{{{total}}}</h2>
+      </div>
+    </div>
+
+
   </div>
 
   {{!-- add new one button--}}
   <div class="text-center">
-    <a href="/records/new" class="btn w-50 mb-3 p-0 addbtn">
+    <a href="/records/new" class="btn w-100 mb-3 p-0 addbtn">
       新增支出
     </a>
   </div>
@@ -109,3 +117,35 @@
     {{/each}}
   </table>
 </div>
+
+
+{{!-- chart here --}}
+<script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+<script>
+  var ctx = document.getElementById('chart-area').getContext('2d');
+  var myChart = new Chart(ctx, {
+    type: 'pie',
+    data: {
+      labels: ['家居物業', '交通出行', '休閒娛樂', '餐飲食品', '其他'],
+      datasets: [{
+        label: '# of Votes',
+        data: [{{ subtotalList }}],
+      backgroundColor: [
+        'rgba(193, 216, 47, 0.65)',
+        'rgba(244, 137, 36, 0.65)',
+        'rgba(0, 174, 255, 0.65)',
+        'rgba(255, 99, 114, 0.65)',
+        'rgba(58, 73, 88, 0.65)',
+      ],
+      hoverBackgroundColor: [
+        'rgba(193, 216, 47, 0.9)',
+        'rgba(244, 137, 36, 0.9)',
+        'rgba(0, 174, 255, 0.9)',
+        'rgba(255, 99, 114, 0.9)',
+        'rgba(58, 73, 88, 0.9)',
+      ],
+      borderWidth: 1
+    }]
+  },
+  });
+</script>
