--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -17,10 +17,10 @@
             <input type="password" class="form-control" name="password" required>
           </div>
 
-          <button type="submit" class="btn btn-primary btn-block">Login</button>
+          <button type="submit" class="btn btn-info btn-block">Login</button>
         </form>
 
-        <a href="/auth/facebook" class="btn btn-info btn-block mt-2">Facebook Login</a>
+        {{!-- <a href="/auth/facebook" class="btn btn-primary  btn-block mt-2">Facebook Login</a> --}}
 
         <p class="mt-4">
           No Account? <a href="/users/register">Register</a>
